--- a/styles.css
+++ b/styles.css
@@ -84,8 +84,6 @@ li {
 }
 
 .product-info {
-    margin-bottom: 2.5rem;
-    background-color: #f3f4f6;
     border-radius: 0.5rem;
     padding: 0.75rem 1.5rem;
     max-width: 57%;
@@ -102,6 +100,7 @@ li {
 .product-info p{
     font-size: 2rem;
     font-weight: 600;
+    margin-left: 5rem;
 }
 
 .product-container{
@@ -151,7 +150,7 @@ li {
     }
 
     .image-container img{
-        max-height: 35rem;
+        max-height: 33rem;
         
     }
 
