--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ body {
     margin-bottom: 2.5rem;
     font-size: 0.875rem;
     font-size: 600;
+    line-height: 1rem;
 }
 
 .highlight-content p{
